fix(GO-T669): fixed the drop-down icon issue on the address component; set "just use" the last item of predictions list; aligned the clear/edit icons to the bottom

--- a/src/components/fs-address-picker/fs-address-picker.component.scss
+++ b/src/components/fs-address-picker/fs-address-picker.component.scss
@@ -9,7 +9,14 @@
 }
 
 :host ::ng-deep {
-  .mat-form-field-infix {
-    padding-right: 80px;
+  .search {
+    .mat-form-field-flex {
+      flex-direction: row;
+    }
+
+    .mat-form-field-suffix {
+      align-self: flex-end;
+      padding-bottom: 4px;
+    }
   }
 }
